package service

import (
	"context"

	"github.com/go-kratos/kratos/v2/log"
	paginationV1 "github.com/tx7do/go-crud/api/gen/go/pagination/v1"
	"github.com/tx7do/go-utils/aggregator"
	"github.com/tx7do/kratos-bootstrap/bootstrap"
	"google.golang.org/protobuf/types/known/emptypb"

	"go-wind-cms/app/core/service/internal/data"

	identityV1 "go-wind-cms/api/gen/go/identity/service/v1"
)

type PositionService struct {
	identityV1.UnimplementedPositionServiceServer

	log *log.Helper

	positionRepo *data.PositionRepo
	orgUnitRepo  *data.OrgUnitRepo
}

func NewPositionService(
	ctx *bootstrap.Context,
	positionRepo *data.PositionRepo,
	orgUnitRepo *data.OrgUnitRepo,
) *PositionService {
	return &PositionService{
		log:          ctx.NewLoggerHelper("position/service/core-service"),
		positionRepo: positionRepo,
		orgUnitRepo:  orgUnitRepo,
	}
}

func (s *PositionService) extractRelationIDs(
	positions []*identityV1.Position,
	orgUnitSet aggregator.ResourceMap[uint32, *identityV1.OrgUnit],
) {
	for _, p := range positions {
		if p.GetOrgUnitId() > 0 {
			orgUnitSet[p.GetOrgUnitId()] = nil
		}
	}
}

func (s *PositionService) fetchRelationInfo(
	ctx context.Context,
	orgUnitSet aggregator.ResourceMap[uint32, *identityV1.OrgUnit],
) error {
	if len(orgUnitSet) > 0 {
		orgUnitIds := make([]uint32, 0, len(orgUnitSet))
		for id := range orgUnitSet {
			orgUnitIds = append(orgUnitIds, id)
		}

		orgUnits, err := s.orgUnitRepo.ListOrgUnitsByIds(ctx, orgUnitIds)
		if err != nil {
			s.log.Errorf("query orgUnits err: %v", err)
			return err
		}

		for _, orgUnit := range orgUnits {
			orgUnitSet[orgUnit.GetId()] = orgUnit
		}
	}

	return nil
}

func (s *PositionService) bindRelations(
	positions []*identityV1.Position,
	orgUnitSet aggregator.ResourceMap[uint32, *identityV1.OrgUnit],
) {
	aggregator.Populate(
		positions,
		orgUnitSet,
		func(ou *identityV1.Position) uint32 { return ou.GetOrgUnitId() },
		func(ou *identityV1.Position, org *identityV1.OrgUnit) {
			ou.OrgUnitName = org.Name
		},
	)
}

func (s *PositionService) enrichRelations(ctx context.Context, positions []*identityV1.Position) error {
	var orgUnitSet = make(aggregator.ResourceMap[uint32, *identityV1.OrgUnit])
	s.extractRelationIDs(positions, orgUnitSet)
	if err := s.fetchRelationInfo(ctx, orgUnitSet); err != nil {
		return err
	}
	s.bindRelations(positions, orgUnitSet)
	return nil
}

func (s *PositionService) List(ctx context.Context, req *paginationV1.PagingRequest) (*identityV1.ListPositionResponse, error) {
	resp, err := s.positionRepo.List(ctx, req)
	if err != nil {
		return nil, err
	}

	_ = s.enrichRelations(ctx, resp.Items)

	return resp, nil
}

func (s *PositionService) Count(ctx context.Context, req *paginationV1.PagingRequest) (*identityV1.CountPositionResponse, error) {
	count, err := s.positionRepo.Count(ctx, req)
	if err != nil {
		return nil, err
	}

	return &identityV1.CountPositionResponse{
		Count: uint64(count),
	}, nil
}

func (s *PositionService) Get(ctx context.Context, req *identityV1.GetPositionRequest) (*identityV1.Position, error) {
	resp, err := s.positionRepo.Get(ctx, req)
	if err != nil {
		return nil, err
	}

	fakeItems := []*identityV1.Position{resp}
	_ = s.enrichRelations(ctx, fakeItems)

	return resp, nil
}

func (s *PositionService) Create(ctx context.Context, req *identityV1.CreatePositionRequest) (*emptypb.Empty, error) {
	if req.Data == nil {
		return nil, identityV1.ErrorBadRequest("invalid parameter")
	}

	if err := s.positionRepo.Create(ctx, req); err != nil {
		return nil, err
	}

	return &emptypb.Empty{}, nil
}

func (s *PositionService) Update(ctx context.Context, req *identityV1.UpdatePositionRequest) (*emptypb.Empty, error) {
	if req.Data == nil {
		return nil, identityV1.ErrorBadRequest("invalid parameter")
	}

	if err := s.positionRepo.Update(ctx, req); err != nil {
		return nil, err
	}

	return &emptypb.Empty{}, nil
}

func (s *PositionService) Delete(ctx context.Context, req *identityV1.DeletePositionRequest) (*emptypb.Empty, error) {
	if err := s.positionRepo.Delete(ctx, req); err != nil {
		return nil, err
	}

	return &emptypb.Empty{}, nil
}
